# thelastriffback

./: .env_exemplo  .gitignore  README.md  package-lock.json  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
loja_guitarras/: manage.py
loja_guitarras/loja_guitarras/: asgi.py  settings.py  urls.py  wsgi.py
thelastriff/: admin.py  apps.py  models.py  test_serializers.py  tests_models.py
thelastriff/migrations/: 0001_initial.py  0002_categoria_delete_category.py  0002_pedido_perfil_remove_livro_autores_and_more.py  0003_editora_remove_categoria_nome.py  0003_pedido_cliente.py  0004_delete_editora.py
thelastriff/models/: __init__.py  guitarra.py  itempedido.py  pedido.py  perfil.py
thelastriff/serializers/: __init__.py  guitarra.py  itempedido.py  pedido.py  perfil.py
thelastriff/views/: __init__.py  guitarra.py  itempedido.py  pedido.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
