[project]
name = "thelastriff"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mariaeduardanichelle", email = "madunichelle@gmail.com"},
]
dependencies = [
    "django>=5.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
